--- a/chess/.github/workflows/ufbt_build.yaml
+++ b/chess/.github/workflows/ufbt_build.yaml
@@ -1,5 +1,6 @@
-name: "FAP: Build for multiple SDK sources"
+name: "uFBT Build"
 on:
+  workflow_dispatch:
   push:
     branches: 
       - main
@@ -21,9 +22,9 @@ jobs:
     name: 'ufbt: Build for ${{ matrix.name }}'
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Build with ufbt
-        uses: flipperdevices/flipperzero-ufbt-action@v0.1.2
+        uses: flipperdevices/flipperzero-ufbt-action@v0.1.3
         id: build-app
         with:
           sdk-channel: ${{ matrix.sdk-channel }}
