--- a/flipbip/catalog/manifest.yml
+++ b/flipbip/catalog/manifest.yml
@@ -2,16 +2,16 @@ sourcecode:
   type: git
   location:
     origin: https://github.com/xtruan/FlipBIP.git
-    commit_sha: 3cb8313f13b95e12ae1a4e5ea9d679a058b33aac
+    commit_sha: 5afc1d3d7bc5b45a06a7d188e98de61fd8a0183c
 description: "Cryptocurrency wallet with support for BTC, ETH, DOGE, and ZEC (t-addr)"
-changelog: "v1.14.0 - Confirmation before wallet regeneration"
+changelog: "v1.16 - Minor UI cleanup"
 author: "@xtruan"
 screenshots:
-  - "./catalog/startscreen.png"
   - "./catalog/menu1.png"
   - "./catalog/menu2.png"
   - "./catalog/input_mnemonic.png"
   - "./catalog/btc_loading.png"
   - "./catalog/wallet_info.png"
+  - "./catalog/wallet_mnemonic.png"
   - "./catalog/btc_receive.png"
   - "./catalog/settings.png"
